// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionReplies edit action sheet calls cancel 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 0,
      }
    }
  >
    <View
      accessibilityLabel=""
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#C7CDD1",
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontWeight": "600",
            },
            Object {
              "fontSize": 8,
            },
          ]
        }
      >
        TD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23, 2017 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "padding": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0.1,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "padding": 0,
            }
          }
        >
          <View
            accessibilityLabel=""
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "#C7CDD1",
                  "borderWidth": 0.5,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontWeight": "600",
                  },
                  Object {
                    "fontSize": 8,
                  },
                ]
              }
            >
              TD
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "flex": 1,
                "width": 1,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "marginTop": 12.8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              The Donald
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 12,
                    "marginBottom": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              May 23, 2017 11:12 AM
            </Text>
            <View
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 16,
                }
              }
            >
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.reply-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Reply
                  </Text>
                </View>
              </TouchableOpacity>
              <Text
                accessible={false}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "alignSelf": "flex-end",
                        "padding": 2,
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#C7CDD1",
                        "paddingLeft": 10,
                        "paddingRight": 10,
                        "textAlign": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                |
              </Text>
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.edit-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Edit
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 0,
      }
    }
  >
    <View
      accessibilityLabel=""
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#C7CDD1",
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontWeight": "600",
            },
            Object {
              "fontSize": 8,
            },
          ]
        }
      >
        TD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23, 2017 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "padding": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0.1,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "padding": 0,
            }
          }
        >
          <View
            accessibilityLabel=""
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "#C7CDD1",
                  "borderWidth": 0.5,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontWeight": "600",
                  },
                  Object {
                    "fontSize": 8,
                  },
                ]
              }
            >
              TD
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "flex": 1,
                "width": 1,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "marginTop": 12.8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              The Donald
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 12,
                    "marginBottom": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              May 23, 2017 11:12 AM
            </Text>
            <View
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 16,
                }
              }
            >
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.reply-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Reply
                  </Text>
                </View>
              </TouchableOpacity>
              <Text
                accessible={false}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "alignSelf": "flex-end",
                        "padding": 2,
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#C7CDD1",
                        "paddingLeft": 10,
                        "paddingRight": 10,
                        "textAlign": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                |
              </Text>
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.edit-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Edit
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders deleted 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 0,
      }
    }
  >
    <View
      accessibilityLabel=""
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#C7CDD1",
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontWeight": "600",
            },
            Object {
              "fontSize": 8,
            },
          ]
        }
      >
        TD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23, 2017 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "marginTop": 16,
          }
        }
      />
      <View />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0.1,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "padding": 0,
            }
          }
        >
          <View
            accessibilityLabel=""
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "#C7CDD1",
                  "borderWidth": 0.5,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontWeight": "600",
                  },
                  Object {
                    "fontSize": 8,
                  },
                ]
              }
            >
              TD
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "flex": 1,
                "width": 1,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "marginTop": 12.8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              The Donald
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 12,
                    "marginBottom": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              May 23, 2017 11:12 AM
            </Text>
            <View
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 16,
                }
              }
            >
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.reply-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Reply
                  </Text>
                </View>
              </TouchableOpacity>
              <Text
                accessible={false}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "alignSelf": "flex-end",
                        "padding": 2,
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#C7CDD1",
                        "paddingLeft": 10,
                        "paddingRight": 10,
                        "textAlign": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                |
              </Text>
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.edit-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Edit
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders more button with some deleted replies 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 0,
      }
    }
  >
    <View
      accessibilityLabel=""
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#C7CDD1",
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontWeight": "600",
            },
            Object {
              "fontSize": 8,
            },
          ]
        }
      >
        TD
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23, 2017 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "padding": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`DiscussionReplies renders with no user 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "padding": 0,
      }
    }
  >
    <View
      accessibilityLabel=""
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#C7CDD1",
            "borderWidth": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontWeight": "600",
            },
            Object {
              "fontSize": 8,
            },
          ]
        }
      >
        ?
      </Text>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Unknown Author
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23, 2017 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "padding": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "padding": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0.1,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "padding": 0,
            }
          }
        >
          <View
            accessibilityLabel=""
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderColor": "#C7CDD1",
                  "borderWidth": 0.5,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 12,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontWeight": "600",
                  },
                  Object {
                    "fontSize": 8,
                  },
                ]
              }
            >
              TD
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#f5f5f5",
                "flex": 1,
                "width": 1,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "marginTop": 12.8,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              The Donald
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 12,
                    "marginBottom": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              May 23, 2017 11:12 AM
            </Text>
            <View
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginTop": 16,
                }
              }
            >
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.reply-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Reply
                  </Text>
                </View>
              </TouchableOpacity>
              <Text
                accessible={false}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "alignSelf": "flex-end",
                        "padding": 2,
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#C7CDD1",
                        "paddingLeft": 10,
                        "paddingRight": 10,
                        "textAlign": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                |
              </Text>
              <TouchableOpacity
                accessibilityTraits="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "padding": 2,
                  }
                }
                testID="discussion.edit-btn"
                textAttributes={
                  Object {
                    "color": "#8B969E",
                    "fontWeight": "500",
                  }
                }
              >
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "color": "#374A59",
                            "fontSize": 14,
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-bold",
                          },
                          Object {
                            "color": "#374A59",
                          },
                          Object {
                            "color": "#8B969E",
                            "fontWeight": "500",
                          },
                        ],
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                        },
                      ]
                    }
                  >
                    Edit
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View />
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
